--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ slack_config.py
 *.pyc
 .vscode/
 *-league.csv
+
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
